test_files/invalid/021-keyword-as-identifier.man
def main()
    while = 5
end
